--- a/search.html
+++ b/search.html
@@ -27,13 +27,7 @@
     }
 
     .shine {
-      background: linear-gradient(
-        90deg,
-        #fcfcfc,
-        #800080,
-        #ffffa1,
-        #c3b1e2
-      );
+      background: linear-gradient(90deg, #fcfcfc, #800080, #ffffa1, #c3b1e2);
       background-size: 250% auto;
       color: transparent;
       background-clip: text;
@@ -55,22 +49,9 @@
     </h1>
 
     <div class="mb-6 flex flex-col sm:flex-row gap-2 w-full items-center justify-center">
-      <input
-        id="searchInput"
-        type="text"
-        placeholder="Your name..."
-        class="border border-gray-300 rounded px-2 py-2 text-base focus:outline-none shadow-sm w-48"
-      />
-      <button
-        id="searchBtn"
-        class="
-          bg-gradient-to-r from-purple-500 to-blue-700
-          text-white px-6 py-3 text-lg rounded shadow
-          transition-transform duration-200 ease-in-out
-          hover:scale-105 hover:shadow-xl
-          animate-pulse
-        "
-      >
+      <input id="searchInput" type="text" placeholder="Your name..."
+        class="border border-gray-300 rounded px-2 py-2 text-base focus:outline-none shadow-sm w-48" />
+      <button id="searchBtn" class="bg-gradient-to-r from-purple-500 to-blue-700 text-white px-6 py-3 text-lg rounded shadow transition-transform duration-200 ease-in-out hover:scale-105 hover:shadow-xl animate-pulse">
         Search
       </button>
     </div>
@@ -81,11 +62,9 @@
       <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">
         Updated on : 9 April 2025
       </p>
-
       <p class="mt-2 text-sm text-gray-500 font-normal">
         Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). The duties in the current month will ✨sparkle✨, Use at your own discretion. If you see incomplete data that means the main dutysheet is incomplete as well. Suggestions always welcome (and I won’t say no to free coffee).
       </p>
-
       <p class="mt-7 text-center text-sm font-semibold shine">
         an initiative by Tan Sebastian Poe Ryu© 
       </p>
@@ -120,7 +99,6 @@
         const monthNum = monthMap[updatedMonth];
         if (!monthNum) return false;
 
-        // Match formats like 9/4/2025, 2025-04-09, etc.
         return new RegExp(`[-/]0?${parseInt(monthNum)}[-/]|[-/]${monthNum}[-/]`).test(lower);
       }
 
@@ -141,7 +119,7 @@
         return "";
       }
 
-      function createCard(sheetName, match, leftCells, rowIndex, colIndex, searchTerm, colorClass, sparkle = false) {
+      function createCard(sheetName, match, leftCells, rowIndex, colIndex, searchTerm, colorClass, sparkle = false, dutyLabel = "") {
         const card = document.createElement("div");
         card.className = `p-4 rounded shadow border-l-8 ${colorClass} transition-all duration-200 hover:shadow-xl hover:scale-[1.02] hover:bg-white/50 cursor-pointer ${sparkle ? "sparkle" : ""}`;
 
@@ -151,12 +129,9 @@
           <div class="flex justify-between items-center mb-2">
             <h2 class="text-md font-bold text-gray-800">${sheetName} ${sparkle ? "✨" : ""}</h2>
             <div class="flex flex-col text-right">
-              <p class="text-sm text-gray-800">
-                <strong>Name:</strong> ${match}
-              </p>
-              <p class="text-xs text-gray-200 mb-1">
-                Row ${rowIndex + 2}, Column ${colIndex + 1}
-              </p>
+              <p class="text-sm text-gray-800"><strong>Name:</strong> ${match}</p>
+              ${dutyLabel ? `<p class="text-sm text-pink-600 font-semibold">${dutyLabel}</p>` : ""}
+              <p class="text-xs text-gray-200 mb-1">Row ${rowIndex + 2}, Column ${colIndex + 1}</p>
             </div>
           </div>
           <ul class="pl-4 list-disc text-sm text-gray-700">
@@ -197,7 +172,16 @@
                   }
 
                   const sparkle = [...leftData, cell].some(text => containsMonth(text, updatedMonth));
-                  const card = createCard(name, cell, leftData, rowIndex, colIndex, term, color, sparkle);
+
+                  // 👇 Add duty label for cafeteria columns
+                  let dutyLabel = "";
+                  const isCafeteria = name.includes("CAFETERIA");
+                  if (isCafeteria) {
+                    if (colIndex === 4) dutyLabel = "Break Duty";
+                    else if (colIndex === 9) dutyLabel = "Lunch Duty";
+                  }
+
+                  const card = createCard(name, cell, leftData, rowIndex, colIndex, term, color, sparkle, dutyLabel);
                   resultsDiv.appendChild(card);
                 }
               });
