--- a/search.html
+++ b/search.html
@@ -69,130 +69,198 @@
         an initiative by Tan Sebastian Poe Ryu© 
       </p>
     </footer>
+<!-- [Keep your <head> and styles the same] -->
+<!-- This is your updated <script> section inside the page -->
+<script>
+  const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
+  
+  const sheetConfigs = [
+    { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-300 bg-purple-50' },
+    { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-300 bg-blue-50' },
+    { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-red-300 bg-red-50' },
+    { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-yellow-300 bg-yellow-50' },
+  ];
 
-    <script>
-      const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
-      const sheetId = "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo";
-      const sheetConfigs = [
-        { name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-300 bg-purple-50' },
-        { name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-300 bg-blue-50' },
-        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-red-300 bg-red-50' },
-        { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-yellow-300 bg-yellow-50' },
-      ];
+  const extraSheets = [
+    {
+      sheetId: "11pxAig2ID-c8vigH-5ADpOeshg8GkirngYnAt07iBSA",
+      name: "APR 25",
+      range: "A1:Z1000",
+      color: "border-green-300 bg-green-50",
+      colMatch: "any", left: 2
+    },
+    {
+      sheetId: "1mMXUsCn9_TIsB8BXHreUiAsy_N0B8tDsiCkKmcLEcJc",
+      name: "AS 15-4 floor markers duty",
+      range: "A1:Z1000",
+      color: "border-amber-300 bg-amber-50",
+      colMatch: "any", left: 2
+    },
+    {
+      sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc",
+      name: "LOWER SEC APR",
+      range: "A1:Z1000",
+      color: "border-blue-300 bg-blue-50",
+      colMatch: 2, left: 1
+    },
+    {
+      sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc",
+      name: "UPPER SEC APR",
+      range: "A1:Z1000",
+      color: "border-pink-300 bg-pink-50",
+      colMatch: 2, left: 1
+    }
+  ];
 
-      function getUpdatedMonth() {
-        const updatedText = document.getElementById("updatedDate").innerText;
-        const match = updatedText.match(/(\d+)\s+([A-Za-z]+)\s+\d{4}/);
-        return match ? match[2].toLowerCase() : null;
+  function getUpdatedMonth() {
+    const updatedText = document.getElementById("updatedDate").innerText;
+    const match = updatedText.match(/(\d+)\s+([A-Za-z]+)\s+\d{4}/);
+    return match ? match[2].toLowerCase() : null;
+  }
+
+  function containsMonth(text, updatedMonth) {
+    if (!text) return false;
+    const lower = text.toLowerCase();
+    if (lower.includes(updatedMonth)) return true;
+    const monthMap = {
+      january: '01', february: '02', march: '03', april: '04',
+      may: '05', june: '06', july: '07', august: '08',
+      september: '09', october: '10', november: '11', december: '12'
+    };
+    const monthNum = monthMap[updatedMonth];
+    if (!monthNum) return false;
+    return new RegExp(`[-/]0?${parseInt(monthNum)}[-/]|[-/]${monthNum}[-/]`).test(lower);
+  }
+
+  async function fetchSheet(sheetId, sheetName, range) {
+    const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${encodeURIComponent(sheetName + '!' + range)}?key=${apiKey}`;
+    const res = await fetch(url);
+    if (!res.ok) throw new Error(`Failed to load ${sheetName}`);
+    const json = await res.json();
+    return json.values?.slice(1) || [];
+  }
+
+  function getMergedSafeValue(data, row, colIndex) {
+    for (let r = row; r >= 0; r--) {
+      if (data[r] && data[r][colIndex]) {
+        return data[r][colIndex];
       }
+    }
+    return "";
+  }
 
-      function containsMonth(text, updatedMonth) {
-        if (!text) return false;
-        const lower = text.toLowerCase();
-        if (lower.includes(updatedMonth)) return true;
+  function createCard(sheetName, match, leftCells, rowIndex, colIndex, colorClass, sparkle = false, dutyLabel = "") {
+    const card = document.createElement("div");
+    card.className = `p-4 rounded shadow border-l-8 ${colorClass} transition-all duration-200 hover:shadow-xl hover:scale-[1.02] hover:bg-white/50 cursor-pointer ${sparkle ? "sparkle" : ""}`;
+    const leftItems = leftCells.reverse().map(val => `<li>🔎 ${val}</li>`).join("");
 
-        const monthMap = {
-          january: '01', february: '02', march: '03', april: '04',
-          may: '05', june: '06', july: '07', august: '08',
-          september: '09', october: '10', november: '11', december: '12'
-        };
-        const monthNum = monthMap[updatedMonth];
-        if (!monthNum) return false;
+    card.innerHTML = `
+      <div class="flex justify-between items-center mb-2">
+        <h2 class="text-md font-bold text-gray-800">${sheetName} ${sparkle ? "✨" : ""}</h2>
+        <div class="flex flex-col text-right">
+          <p class="text-sm text-gray-800"><strong>Name:</strong> ${match}</p>
+          ${dutyLabel ? `<p class="text-sm text-pink-600 font-semibold">${dutyLabel}</p>` : ""}
+          <p class="text-xs text-gray-200 mb-1">Row ${rowIndex + 2}, Column ${colIndex + 1}</p>
+        </div>
+      </div>
+      <ul class="pl-4 list-disc text-sm text-gray-700">
+        ${leftItems || "<li><em>None found</em></li>"}
+      </ul>
+    `;
+    return card;
+  }
 
-        return new RegExp(`[-/]0?${parseInt(monthNum)}[-/]|[-/]${monthNum}[-/]`).test(lower);
-      }
+  document.getElementById("searchBtn").addEventListener("click", async () => {
+    const term = document.getElementById("searchInput").value.trim();
+    const resultsDiv = document.getElementById("results");
+    resultsDiv.innerHTML = "";
 
-      async function fetchSheet(sheetName, range) {
-        const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${encodeURIComponent(sheetName + '!' + range)}?key=${apiKey}`;
-        const res = await fetch(url);
-        if (!res.ok) throw new Error(`Failed to load ${sheetName}`);
-        const json = await res.json();
-        return json.values?.slice(1) || [];
-      }
+    if (!term) {
+      resultsDiv.innerHTML = `<div class="bg-yellow-100 text-yellow-700 p-3 rounded">Please enter your name ⌛.</div>`;
+      return;
+    }
 
-      function getMergedSafeValue(row, colIndex) {
-        for (let r = row; r >= 0; r--) {
-          if (cachedData[r] && cachedData[r][colIndex]) {
-            return cachedData[r][colIndex];
-          }
-        }
-        return "";
-      }
+    const lowerTerm = term.toLowerCase();
+    const updatedMonth = getUpdatedMonth();
 
-      function createCard(sheetName, match, leftCells, rowIndex, colIndex, searchTerm, colorClass, sparkle = false, dutyLabel = "") {
-        const card = document.createElement("div");
-        card.className = `p-4 rounded shadow border-l-8 ${colorClass} transition-all duration-200 hover:shadow-xl hover:scale-[1.02] hover:bg-white/50 cursor-pointer ${sparkle ? "sparkle" : ""}`;
-
-        const leftItems = leftCells.reverse().map(val => `<li>🔎 ${val}</li>`).join("");
-
-        card.innerHTML = `
-          <div class="flex justify-between items-center mb-2">
-            <h2 class="text-md font-bold text-gray-800">${sheetName} ${sparkle ? "✨" : ""}</h2>
-            <div class="flex flex-col text-right">
-              <p class="text-sm text-gray-800"><strong>Name:</strong> ${match}</p>
-              ${dutyLabel ? `<p class="text-sm text-pink-600 font-semibold">${dutyLabel}</p>` : ""}
-              <p class="text-xs text-gray-200 mb-1">Row ${rowIndex + 2}, Column ${colIndex + 1}</p>
-            </div>
-          </div>
-          <ul class="pl-4 list-disc text-sm text-gray-700">
-            ${leftItems || "<li><em>None found</em></li>"}
-          </ul>
-        `;
-        return card;
-      }
-
-      let cachedData = [];
-
-      document.getElementById("searchBtn").addEventListener("click", async () => {
-        const term = document.getElementById("searchInput").value.trim();
-        const resultsDiv = document.getElementById("results");
-        resultsDiv.innerHTML = "";
-
-        if (!term) {
-          resultsDiv.innerHTML = `<div class="bg-yellow-100 text-yellow-700 p-3 rounded">Please enter your name ⌛.</div>`;
-          return;
-        }
-
-        const lowerTerm = term.toLowerCase();
-        const updatedMonth = getUpdatedMonth();
-
-        for (const { name, range, left, color } of sheetConfigs) {
-          try {
-            cachedData = await fetchSheet(name, range);
-            cachedData.forEach((row, rowIndex) => {
-              if (!row) return;
-              row.forEach((cell, colIndex) => {
-                if (cell?.toLowerCase().includes(lowerTerm)) {
-                  const leftData = [];
-                  for (let i = 1; i <= left; i++) {
-                    const leftCol = colIndex - i;
-                    if (leftCol >= 0) {
-                      leftData.push(getMergedSafeValue(rowIndex, leftCol));
-                    }
-                  }
-
-                  const sparkle = [...leftData, cell].some(text => containsMonth(text, updatedMonth));
-
-                  // 👇 Add duty label for cafeteria columns
-                  let dutyLabel = "";
-                  const isCafeteria = name.includes("CAFETERIA");
-                  if (isCafeteria) {
-                    if (colIndex === 4) dutyLabel = "Break Duty";
-                    else if (colIndex === 9) dutyLabel = "Lunch Duty";
-                  }
-
-                  const card = createCard(name, cell, leftData, rowIndex, colIndex, term, color, sparkle, dutyLabel);
-                  resultsDiv.appendChild(card);
+    for (const { sheetId, name, range, left, color } of sheetConfigs) {
+      try {
+        const cachedData = await fetchSheet(sheetId, name, range);
+        cachedData.forEach((row, rowIndex) => {
+          if (!row) return;
+          row.forEach((cell, colIndex) => {
+            if (cell?.toLowerCase().includes(lowerTerm)) {
+              const leftData = [];
+              for (let i = 1; i <= left; i++) {
+                const leftCol = colIndex - i;
+                if (leftCol >= 0) {
+                  leftData.push(getMergedSafeValue(cachedData, rowIndex, leftCol));
                 }
-              });
+              }
+
+              let dutyLabel = "";
+              if (name.includes("CAFETERIA")) {
+                if (colIndex === 4) dutyLabel = "Break Duty";
+                else if (colIndex === 5) dutyLabel = "Lunch Duty";
+              }
+
+              const sparkle = [...leftData, cell].some(text => containsMonth(text, updatedMonth));
+              const card = createCard(name, cell, leftData, rowIndex, colIndex, color, sparkle, dutyLabel);
+              resultsDiv.appendChild(card);
+            }
+          });
+        });
+      } catch (err) {
+        console.error(err);
+        resultsDiv.innerHTML += `<div class="bg-red-100 text-red-700 p-3 rounded">Error loading ${name}</div>`;
+      }
+    }
+
+    // Extra Sheets
+    for (const { sheetId, name, range, color, colMatch, left } of extraSheets) {
+      try {
+        const data = await fetchSheet(sheetId, name, range);
+        data.forEach((row, rowIndex) => {
+          if (!row) return;
+
+          if (colMatch === "any") {
+            row.forEach((cell, colIndex) => {
+              if (cell?.toLowerCase().includes(lowerTerm)) {
+                const leftData = [];
+                for (let i = 1; i <= left; i++) {
+                  const leftCol = colIndex - i;
+                  if (leftCol >= 0) {
+                    leftData.push(getMergedSafeValue(data, rowIndex, leftCol));
+                  }
+                }
+                const card = createCard(name, cell, leftData, rowIndex, colIndex, color);
+                resultsDiv.appendChild(card);
+              }
             });
-          } catch (err) {
-            console.error(err);
-            resultsDiv.innerHTML += `<div class="bg-red-100 text-red-700 p-3 rounded">Error loading ${name}</div>`;
+          } else if (row[colMatch]?.toLowerCase().includes(lowerTerm)) {
+            const match = row[colMatch];
+            const leftData = [];
+            if (colMatch > 0) {
+              leftData.push(getMergedSafeValue(data, rowIndex, colMatch - 1));
+            }
+            const card = createCard(name, match, leftData, rowIndex, colMatch, color);
+            resultsDiv.appendChild(card);
           }
-        }
-      });
-    </script>
+        });
+      } catch (err) {
+        console.error(err);
+        resultsDiv.innerHTML += `<div class="bg-red-100 text-red-700 p-3 rounded">Error loading ${name}</div>`;
+      }
+    }
+  });
+</script>
+
+
+
+
+
+
+    
   </div>
 </body>
 </html>
